# torch-serving

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  ModelServer.h  README.md  ServableManager.h  serving.cpp
apps/: CMakeLists.txt  serving.cpp
example/: create_model.py  post-data.json
include/torch_serving/: model_server.h  servable_manager.h  tensor_io.h  torch_jit_servable.h
scripts/: libtorch-root
src/: CMakeLists.txt  model_server.cpp  servable_manager.cpp  tensor_io.cpp
tests/: CMakeLists.txt  test_tensor_io.cpp  test_torch_serving.cpp
tests/assets/: test-servable-response.json
